<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constrainedHeight="false">

        <TextView
            android:id="@+id/timeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textSize="20sp"
            android:text="@string/time" />

        <TextView
            android:id="@+id/time_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/distanceText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textSize="20sp"
            android:text="@string/distance" />

        <TextView
            android:id="@+id/distance_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textSize="60sp" />

        <Button
            android:id="@+id/endRunButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/end_run" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>