<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/egg_Run_Title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:contentDescription="@string/Title"
            app:srcCompat="@drawable/egg_run_title"
            />

        <TextView
            android:id="@+id/distance_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:textSize="@dimen/standard_text_height"
            android:text="@string/distance"
            android:textAlignment="center"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/distance_view_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:textSize="@dimen/standard_text_height"
            android:textAlignment="center"
            android:textColor="@color/black"/>


        <TextView
            android:id="@+id/time_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:textSize="@dimen/standard_text_height"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/time"
            />

        <TextView
            android:id="@+id/time_view_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:textSize="@dimen/standard_text_height"
            android:textAlignment="center"
            android:textColor="@color/black"
             />

        <TextView
            android:id="@+id/average_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:textSize="@dimen/standard_text_height"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:text="@string/average_speed" />

        <TextView
            android:id="@+id/average_speed_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/standard_margin"
            android:textSize="@dimen/standard_text_height"
            android:textAlignment="center"
            android:textColor="@color/black"
             />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>