<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/blankegg" />

            <Button
                android:id="@+id/commonButton"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:background="@drawable/eggmenu1"
                android:text="@string/common_button"
                android:textColor="#000000"
                app:backgroundTint="@drawable/change_button_color"
                app:backgroundTintMode="multiply" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/blankegg" />

            <Button
                android:id="@+id/uncommonButton"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:background="@drawable/eggmenu2"
                android:text="@string/uncommon_button"
                android:textColor="#000000"
                app:backgroundTint="@drawable/change_button_color"
                app:backgroundTintMode="multiply" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/blankegg" />

            <Button
                android:id="@+id/rareButton"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:background="@drawable/eggmenu3"
                android:text="@string/rare_button"
                android:textColor="#000000"
                app:backgroundTint="@drawable/change_button_color"
                app:backgroundTintMode="multiply" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/blankegg" />

            <Button
                android:id="@+id/legendaryButton"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:background="@drawable/eggmenu4"
                android:text="@string/legendary_button"
                android:textColor="#000000"
                app:backgroundTint="@drawable/change_button_color"
                app:backgroundTintMode="multiply" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>